--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ set(CMAKE_CXX_STANDARD 11)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
-# find_package(unofficial-sqlite3 REQUIRED)
+# find_package(unofficial-sqlite3 CONFIG REQUIRED)
+# target_link_libraries(main PRIVATE unofficial::sqlite3::sqlite3)
+
 set(DB_LIB sqlite3)
 set(HTTPD_LIB microhttpd)
 
