Fix t json value

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,18 +7,18 @@ bin_PROGRAMS=ws-sqlite
 nobase_dist_include_HEADERS = \
 	platform.h \
 	lorawan-ws.h \
-	argtable3/argtable3.h \
-	lorawan-network-server/db-intf.h \
-	lorawan-network-server/db-sqlite.h
+	third_party/argtable3/argtable3.h \
+	third_party/lorawan-network-server/db-intf.h \
+	third_party/lorawan-network-server/db-sqlite.h
 	
 ws_sqlite_SOURCES = \
-	ws-sqlite.cpp lorawan-ws.cpp
+	ws-sqlite.cpp lorawan-ws.cpp \
+	third_party/argtable3/argtable3.c
 ws_sqlite_LDADD = \
-    -lsqlite3 -lmicrohttpd -lpthread 
+    -lsqlite3 -lmicrohttpd
 ws_sqlite_CPPFLAGS = -I. -Ithird_party
 
 configdir = $(datadir)
 dist_config_DATA = \
-	README.md \
-	third_party/argtable3/README \
-	third_party/lorawan-network-server/README
+	CMakeLists.txt CODE_OF_CONDUCT.md CONTRIBUTING.md COPYING HISTORY LICENSE README.md TODO \
+	third_party/argtable3/README
