--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,7 @@ AM_CPPFLAGS = -O2
 ACLOCAL_AMFLAGS = -I m4
 
 bin_PROGRAMS=ws-sqlite
+lib_LIBRARIES = libws-sqlite.a
 
 nobase_dist_include_HEADERS = \
 	platform.h \
@@ -11,12 +12,17 @@ nobase_dist_include_HEADERS = \
 	third_party/lorawan-network-server/db-intf.h \
 	third_party/lorawan-network-server/db-sqlite.h
 	
+LIB_WS_SQLITE_SRC = \
+	lorawan-ws.cpp
+
 ws_sqlite_SOURCES = \
 	ws-sqlite.cpp lorawan-ws.cpp \
 	third_party/argtable3/argtable3.c
-ws_sqlite_LDADD = \
-    -lsqlite3 -lmicrohttpd
+ws_sqlite_LDADD = -lsqlite3 -lmicrohttpd
 ws_sqlite_CPPFLAGS = -I. -Ithird_party
+
+libws_sqlite_a_SOURCES = $(LIB_WS_SQLITE_SRC)
+libws_sqlite_a_CXXFLAGS = -I. -Ithird_party -fPIC
 
 configdir = $(datadir)
 dist_config_DATA = \
