--- a/Makefile.am
+++ b/Makefile.am
@@ -36,7 +36,7 @@ ws_sqlite_LDADD = -lsqlite3 -lmicrohttpd $(AUTH_LIB)
 ws_sqlite_CPPFLAGS = -I. -Ithird_party -I../../third_party $(AUTH_DEF)
 
 libws_sqlite_a_SOURCES = $(LIB_WS_SQLITE_SRC)
-libws_sqlite_a_CXXFLAGS = -I. -Ithird_party -I../../third_party -fPIC
+libws_sqlite_a_CXXFLAGS = -I. -Ithird_party -I../../third_party -fPIC $(AUTH_DEF)
 
 configdir = $(datadir)
 dist_config_DATA = \
